--- a/Consumer.Api/Consumer.Api.csproj
+++ b/Consumer.Api/Consumer.Api.csproj
@@ -1,17 +1,18 @@
 <Project Sdk="Microsoft.NET.Sdk.Web">
-
   <PropertyGroup>
     <TargetFramework>net8.0</TargetFramework>
     <Nullable>enable</Nullable>
     <ImplicitUsings>enable</ImplicitUsings>
     <InvariantGlobalization>true</InvariantGlobalization>
   </PropertyGroup>
-
   <ItemGroup>
     <PackageReference Include="MassTransit" Version="8.1.2" />
     <PackageReference Include="MassTransit.RabbitMQ" Version="8.1.2" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
-
+  <ItemGroup>
+    <ProjectReference Include="..\common\EventBus.Message\EventBus.Message.csproj" />
+    <ProjectReference Include="..\common\Infrastructure\Infrastructure.csproj" />
+  </ItemGroup>
 </Project>
