--- a/Consumer.Api/appsettings.json
+++ b/Consumer.Api/appsettings.json
@@ -5,5 +5,15 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "MasstransitConfiguration": {
+    "Host": "localhost",
+    "VHost": "/",
+    "Username": "guest",
+    "Password": "guest",
+    "ExchangeName": "send-notification-exchange",
+    "ExchangeType": "topic",
+    "SmsQueueName": "sms-queue",
+    "EmailQueueName": "email-queue"
+  }
 }
